[package]
name = "solana_balance_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
